2003-05-03  Mo DeJong  <mdejong@users.sourceforge.net>

	Rework flex invocations via the "make flexgen"
	target so that generated .c files include only
	the file name of the .l file instead of the
	fully qualified path. Also, generate
	the c files directly in the srcdir.

	* hyper/Makefile.am:
	* hyper/Makefile.in: Regen.
	* hyper/c_high.c: Regen.
	* hyper/ch_high.c: Regen.
	* hyper/j_high.c: Regen.
	* hyper/py_high.c: Regen.
	* hyper/tcl_high.c: Regen.
	* parsers/assembly/ppc601-eabi/Makefile.am:
	* parsers/assembly/ppc601-eabi/Makefile.in: Regen.
	* parsers/assembly/ppc601-eabi/abrowser.c: Regen.
	* parsers/chill/Makefile.am:
	* parsers/chill/Makefile.in: Regen.
	* parsers/m4/Makefile.am:
	* parsers/m4/Makefile.in: Regen.
	* parsers/m4/m4browser.c: Regen.
	* parsers/python/Makefile.am:
	* parsers/python/Makefile.in: Regen.
	* parsers/python/pybrowser.c: Regen.
	* parsers/sendmail/Makefile.am:
	* parsers/sendmail/Makefile.in: Regen.
	* parsers/sendmail/sbrowser.c: Regen.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/common/parser.c (put_cross_ref):
	Fix mistake made when moving code over from
	dbutils.c, do nothing when the cross_ref_fp
	global var is not set.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tmeter.tcl (make_scale_window): Add
	a call to sn_wait so that we sit in the
	event loop for a little bit after the scale
	window is mapped. This is needed to work around
	a problem under win32 where the scale window
	is mapped but the contents are not drawn for
	a couple of seconds.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cpp/cbrowser2.c (main): Print an error
	to stdout and exit if the xref_file given does
	not exist. Don't flush stdout after a read of
	a non-cppref line. Performance will be much
	better if the buffer is allowed to fill up before
	it is flushed.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	Split parser functionality out of db/dbutils.c